--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <div class="cert-card"><img src="images/excel.jpg" alt="證照4"><p>excel</p></div>
     <div class="cert-card"><img src="images/中打.jpg" alt="證照5"><p>中打</p></div>
     <div class="cert-card"><img src="images/英打.jpg" alt="證照6"><p>英打</p></div>
-    <div class="cert-card"><img src="images/python.jpg" alt="證照7"><p>pytgon</p></div>
-    <div class="cert-card"><img src="images/SSE.jpg" alt="證照8"><p>SEE</p></div>
+    <div class="cert-card"><img src="images/python.jpg" alt="證照7"><p>python</p></div>
+    <div class="cert-card"><img src="images/SSE.jpg" alt="證照8"><p>SSE</p></div>
     <div class="cert-card"><img src="images/Azure.jpg" alt="證照9"><p>Azure</p></div>
   </div>
 </section>
